--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ canvas {
   }
 
   .nav-height {
-    @apply h-[calc(100vh-60px)];
+    @apply h-[calc(100svh-60px)];
   }
 
   .btn {
@@ -72,7 +72,7 @@ canvas {
   }
 
   .feature-text {
-    @apply text-gray max-w-md text-lg md:text-xl font-semibold opacity-0 translate-y-[100px];
+    @apply text-gray max-w-full md:max-w-md text-lg md:text-xl font-semibold opacity-0 translate-y-[100px];
   }
 
   .feature-text-container {
@@ -112,7 +112,7 @@ canvas {
   }
 
   .hiw-text-container {
-    @apply flex md:flex-row flex-col justify-between items-start gap-24;
+    @apply flex md:flex-row flex-col justify-between items-start gap-8 md:gap-24;
   }
 
   .hiw-text {
